Test case passed, removed the getfirst() to get(0)